Removed deprecated methods;